Add ellipsis styling to card icon text
Introduced CSS to ensure card icon text uses ellipsis for overflow, improving display consistency and preventing text from spilling out of its container.

--- a/exploding-kittens.html
+++ b/exploding-kittens.html
@@ -53,6 +53,14 @@
             gap: 1.2rem;
             margin: 2rem 0;
         "></div>
+        <style>
+            .card-icon span {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: block;
+            }
+        </style>
 
         <div id="card-modal" style="
             display: none;
