--- a/exploding-kittens.html
+++ b/exploding-kittens.html
@@ -36,6 +36,9 @@
     <div id="header-container"></div>
     <div class="container">
         <h1>Exploding Kittens</h1>
+            <div style="text-align:center; margin-bottom:1.2em;">
+                <a href="exploding-kittens-expansions.html" style="display:inline-block; background:#eaeaea; color:#222; padding:0.5em 1.2em; border-radius:6px; text-decoration:none; font-weight:500; font-size:1.05em; transition:background 0.2s;">Ver packs y expansiones</a>
+            </div>
         <p class="intro">
             Página dedicada a las reglas y cartas del juego <b>Exploding Kittens</b>.
         </p>
