Refactor card modal logic and expand expansions config
Moved showCardInfo and closeModal functions to a new shared js/exploding-kittens-functions.js file and updated HTML files to include this script. Enhanced expansions-config.json with more detailed expansion and pack data, including icons and card lists. Updated expansions and main JS to use the new shared modal logic and improved card data handling.

--- a/exploding-kittens.html
+++ b/exploding-kittens.html
@@ -86,6 +86,7 @@
     </div>
     <div id="footer-container"></div>
     <script src="js/include.js"></script>
+    <script src="js/exploding-kittens-functions.js"></script>
     <script src="js/exploding-kittens.js"></script>
 </body>
 </html>
