--- a/exploding-kittens-expansions.html
+++ b/exploding-kittens-expansions.html
@@ -95,6 +95,7 @@
     </div>
     <div id="footer-container"></div>
     <script src="js/include.js"></script>
+    <script src="js/exploding-kittens-functions.js"></script>
     <script src="js/exploding-kittens-expansions.js"></script>
 </body>
 
