Expandir reglas y detalles de Exploding Kittens
Se amplió la sección de reglas básicas en el archivo HTML para incluir una explicación más detallada de la preparación, tipos de cartas, acciones principales y notas importantes del juego Exploding Kittens. Esto proporciona a los jugadores una guía más completa y clara sobre cómo jugar y las mecánicas principales.

--- a/exploding-kittens.html
+++ b/exploding-kittens.html
@@ -44,11 +44,39 @@
         </p>
         <h2>Reglas Básicas</h2>
         <ul>
-            <li>El objetivo es evitar explotar con un Exploding Kitten.</li>
-            <li>En tu turno, puedes jugar cartas y luego debes robar una carta.</li>
-            <li>Si robas un Exploding Kitten y no tienes un Defuse, quedas eliminado.</li>
-            <li>El último jugador en pie gana la partida.</li>
+            <li><b>Objetivo:</b><br>
+                Ser el último jugador en pie evitando explotar con un Exploding Kitten.</li>
+            <li><b>Preparación:</b><br>
+                Separa las cartas de "Exploding Kitten" y "Defuse" del mazo y baraja el resto de cartas.<br>
+                Del mazo barajado, reparte 7 cartas a cada jugador y da una carta extra a cada jugador de "Defuse".<br>
+                El resto de "Defuse" y los "Exploding Kittens" correspondientes (1 carta menos que el numero de jugadores) se mezclan en el mazo y se forma el mazo central.</li>
+            <li><b>Turno de juego:</b><br>
+                En tu turno puedes jugar tantas cartas como quieras (o ninguna). Para jugar una carta, colócala en la pila de descartes y sigue su instrucción.<br>
+                Tu turno acaba robando una carta del mazo. Si robas un Exploding Kitten y tienes un Defuse, puedes usarlo para evitar explotar y meter el Exploding Kitten de nuevo en el mazo donde quieras. Si no tienes Defuse, quedas eliminado.</li>
+            <li><b>Tipos de cartas:</b><br>
+                Hay cartas de acción (Atacar, Saltar, Barajar, Ver el Futuro, Favor, etc.), cartas de Gato (que pueden usarse en parejas para robar una carta a otro jugador), cartas de Exploding Kitten y cartas de Defuse.</li>
+            <li><b>Eliminación:</b><br>
+                Si explotas (robas un Exploding Kitten y no puedes desactivarlo), quedas fuera de la partida y tus cartas se descartan.</li>
+            <li><b>Fin de la partida:</b><br>
+                El último jugador que quede sin explotar es el ganador.</li>
         </ul>
+        <div style="margin-top:1em;">
+            <b>Resumen de acciones principales:</b>
+            <ul>
+                <li><b>Atacar:</b> Termina tu turno sin robar y el siguiente jugador debe jugar dos turnos seguidos.</li>
+                <li><b>Saltar:</b> Termina tu turno sin robar carta.</li>
+                <li><b>Barajar:</b> Baraja el mazo central.</li>
+                <li><b>Ver el Futuro:</b> Mira las 3 primeras cartas del mazo sin cambiar su orden.</li>
+                <li><b>Favor:</b> Elige un jugador para que te dé una carta de su mano a su elección.</li>
+                <li><b>Nope:</b> Cancela el efecto de una carta de acción de otro jugador (excepto Exploding Kitten y Defuse). Puedes usarlo aunque no sea tu turno, aunque no vaya la acción contra tí o incluso contra otro Nope</li>
+                <li><b>Parejas de Gato:</b> Descarta dos cartas iguales de Gato para robar una carta aleatoria de la mano de otro jugador. O descarta tres cartas iguales de Gato para robar la carta que quieras a un jugador, si la tiene, te la tiene que dar, si no la tiene, pierdes la oportunidad y las tres cartas</li>
+            </ul>
+            <b>Notas:</b>
+            <ul>
+                <li>Siempre debes terminar tu turno robando una carta, salvo que una carta te lo impida.</li>
+                <li>Solo puedes usar un Defuse para evitar explotar, y después debes colocar el Exploding Kitten en el mazo donde quieras (puedes engañar a los demás).</li>
+            </ul>
+        </div>
         <h2>Cartas</h2>
         <div id="card-icons-grid" style="
             display: grid;
