--- a/exploding-kittens.html
+++ b/exploding-kittens.html
@@ -69,7 +69,11 @@
                 <li><b>Ver el Futuro:</b> Mira las 3 primeras cartas del mazo sin cambiar su orden.</li>
                 <li><b>Favor:</b> Elige un jugador para que te dé una carta de su mano a su elección.</li>
                 <li><b>Nope:</b> Cancela el efecto de una carta de acción de otro jugador (excepto Exploding Kitten y Defuse). Puedes usarlo aunque no sea tu turno, aunque no vaya la acción contra tí o incluso contra otro Nope</li>
-                <li><b>Parejas de Gato:</b> Descarta dos cartas iguales de Gato para robar una carta aleatoria de la mano de otro jugador. O descarta tres cartas iguales de Gato para robar la carta que quieras a un jugador, si la tiene, te la tiene que dar, si no la tiene, pierdes la oportunidad y las tres cartas</li>
+                <li><b>Parejas de Gato:</b> Descarta dos cartas iguales de Gato para robar una carta aleatoria de la mano de otro jugador. O descarta tres cartas iguales de Gato para robar la carta que quieras a un jugador, si la tiene, te la tiene que dar, si no la tiene, pierdes la oportunidad y las tres cartas.</li>
+            </ul>
+            <div id="cat-cards-icons" style="display:flex;gap:0.5em;align-items:flex-start;justify-content:center;margin:0 0 1.2em 0;padding:0 2em;flex-wrap:wrap;">
+                <!-- Aquí se mostrarán los iconos de las cartas de gato -->
+            </div>
             </ul>
             <b>Notas:</b>
             <ul>
@@ -83,8 +87,17 @@
             grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
             gap: 1.2rem;
             margin: 2rem 0;
+            justify-content: center;
+            padding: 0 2em;
         "></div>
         <style>
+            .card-icon {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+            }
             .card-icon span {
                 white-space: nowrap;
                 overflow: hidden;
@@ -116,5 +129,63 @@
     <script src="js/include.js"></script>
     <script src="js/exploding-kittens-functions.js"></script>
     <script src="js/exploding-kittens.js"></script>
+    <style>
+    .cat-card-icon {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 0.92em;
+        position: relative;
+    }
+    .cat-card-icon img {
+        width: 38px;
+        height: 38px;
+        object-fit: contain;
+        border-radius: 6px;
+        box-shadow: 0 1px 4px rgba(0,0,0,0.07);
+        background: #fff;
+    }
+    .cat-card-name {
+        margin-top: 0.3em;
+        color: #444;
+        max-width: 90px;
+        text-align: center;
+        font-size: 0.97em;
+        background: #fff;
+        border-radius: 5px;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+        padding: 2px 8px;
+        position: absolute;
+        left: 50%;
+        top: 110%;
+        transform: translateX(-50%);
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.18s;
+        z-index: 10;
+        white-space: nowrap;
+    }
+    .cat-card-icon:hover .cat-card-name {
+        opacity: 1;
+        pointer-events: auto;
+    }
+    </style>
+    <script>
+    // Mostrar iconos de cartas de gato
+    document.addEventListener('DOMContentLoaded', function() {
+        const catIconsDiv = document.getElementById('cat-cards-icons');
+        if (!catIconsDiv) return;
+        fetch('data/exploding-kittens/cat-cards-config.json')
+            .then(res => res.json())
+            .then(cats => {
+                catIconsDiv.innerHTML = cats.map(cat => `
+                    <div class="cat-card-icon">
+                        <img src="${cat.image}" alt="${cat.name}" title="${cat.name}" />
+                        <span class="cat-card-name">${cat.name}</span>
+                    </div>
+                `).join('');
+            });
+    });
+    </script>
 </body>
 </html>
