--- a/exploding-kittens.html
+++ b/exploding-kittens.html
@@ -36,9 +36,15 @@
     <div id="header-container"></div>
     <div class="container">
         <h1>Exploding Kittens</h1>
-            <div style="text-align:center; margin-bottom:1.2em;">
-                <a href="exploding-kittens-expansions.html" style="display:inline-block; background:#eaeaea; color:#222; padding:0.5em 1.2em; border-radius:6px; text-decoration:none; font-weight:500; font-size:1.05em; transition:background 0.2s;">Ver packs y expansiones</a>
-            </div>
+        <div style="text-align:center; margin-bottom:1.2em;">
+            <a href="exploding-kittens-expansions.html"
+                style="display:inline-block; background:#eaeaea; color:#222; padding:0.5em 1.2em; border-radius:6px; text-decoration:none; font-weight:500; font-size:1.05em; transition:background 0.2s;">Ver
+                packs y expansiones</a>
+        </div>
+        <div id="expansions-icons"
+            style="display:flex;gap:0.5em;align-items:flex-start;justify-content:center;margin:0 0 1.2em 0;padding:0 2em;flex-wrap:wrap;">
+            <!-- Aquí se mostrarán los iconos de las cartas de gato -->
+        </div>
         <p class="intro">
             Página dedicada a las reglas y cartas del juego <b>Exploding Kittens</b>.
         </p>
@@ -130,46 +136,127 @@
     <script src="js/exploding-kittens-functions.js"></script>
     <script src="js/exploding-kittens.js"></script>
     <style>
-        height: 38px;
-        object-fit: contain;
-        border-radius: 6px;
-        box-shadow: 0 1px 4px rgba(0,0,0,0.07);
-        background: #fff;
-    }
-    .cat-card-name {
-        margin-top: 0.3em;
-        color: #444;
-        max-width: 90px;
-        text-align: center;
-        font-size: 0.97em;
-        background: #fff;
-        border-radius: 5px;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-        padding: 2px 8px;
-        position: absolute;
-        left: 50%;
-        top: 110%;
-        transform: translateX(-50%);
-        opacity: 0;
-        pointer-events: none;
-        transition: opacity 0.18s;
-        z-index: 10;
-        white-space: nowrap;
-    }
-    .cat-card-icon:hover .cat-card-name {
-        opacity: 1;
-        pointer-events: auto;
-    }
+        .cat-card-icon {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 0.92em;
+            position: relative;
+        }
+
+        .cat-card-icon img {
+            width: 38px;
+            height: 38px;
+            object-fit: contain;
+            border-radius: 6px;
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.07);
+            background: #fff;
+        }
+
+        .cat-card-name {
+            margin-top: 0.3em;
+            color: #444;
+            max-width: 90px;
+            text-align: center;
+            font-size: 0.97em;
+            background: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+            padding: 2px 8px;
+            position: absolute;
+            left: 50%;
+            top: 110%;
+            transform: translateX(-50%);
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.18s;
+            z-index: 10;
+            white-space: nowrap;
+        }
+
+        .cat-card-icon:hover .cat-card-name {
+            opacity: 1;
+            pointer-events: auto;
+        }
+
+        .expansion-icon {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 0.92em;
+            position: relative;
+        }
+
+        .expansion-icon img {
+            width: 38px;
+            height: 38px;
+            object-fit: contain;
+            border-radius: 6px;
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.07);
+            background: #fff;
+        }
+
+        .expansion-name {
+            margin-top: 0.3em;
+            color: #444;
+            max-width: 90px;
+            text-align: center;
+            font-size: 0.97em;
+            background: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+            padding: 2px 8px;
+            position: absolute;
+            left: 50%;
+            top: 110%;
+            transform: translateX(-50%);
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.18s;
+            z-index: 10;
+            white-space: nowrap;
+        }
+
+        .expansion-icon:hover .expansion-name {
+            opacity: 1;
+            pointer-events: auto;
+        }
     </style>
     <script>
-    // Mostrar iconos de cartas de gato
-    document.addEventListener('DOMContentLoaded', function() {
-        const catIconsDiv = document.getElementById('cat-cards-icons');
-        if (!catIconsDiv) return;
-        fetch('data/exploding-kittens/cat-cards-config.json')
-            .then(res => res.json())
-            .then(cats => {
-                catIconsDiv.innerHTML = cats.map(cat => `
+        // Mostrar iconos de las expansiones
+        document.addEventListener('DOMContentLoaded', function () {
+            const expansionIconsDiv = document.getElementById('expansions-icons');
+            if (!expansionIconsDiv) return;
+
+            fetch('data/exploding-kittens/expansions-config.json')
+                .then(res => res.json())
+                .then(expansions => {
+                    const allPacks = expansions.flatMap(expansion => expansion.packs);
+
+                    // Se genera el HTML con la etiqueta <a>
+                    expansionIconsDiv.innerHTML = allPacks.map(pack => {
+
+                        return `
+                    <a href="${pack.guideES}" class="expansion-link">
+                        <div class="expansion-icon">
+                            <img src="${pack.icon}" alt="${pack.name}" title="${pack.name}" />
+                            <span class="expansion-name">${pack.name}</span>
+                        </div>
+                    </a>
+                `;
+                    }).join('');
+                });
+        });
+
+
+        // Mostrar iconos de cartas de gato
+        document.addEventListener('DOMContentLoaded', function () {
+            const catIconsDiv = document.getElementById('cat-cards-icons');
+            if (!catIconsDiv) return;
+            fetch('data/exploding-kittens/cat-cards-config.json')
+                .then(res => res.json())
+                .then(cats => {
+                    catIconsDiv.innerHTML = cats.map(cat => `
                     <div class="cat-card-icon">
                         <img src="${cat.image}" alt="${cat.name}" title="${cat.name}" />
                         <span class="cat-card-name">${cat.name}</span>
