--- a/exploding-kittens.html
+++ b/exploding-kittens.html
@@ -185,15 +185,15 @@
             align-items: center;
             font-size: 0.92em;
             position: relative;
+            border-radius: 50%;
         }
 
         .expansion-icon img {
             width: 38px;
             height: 38px;
             object-fit: contain;
-            border-radius: 6px;
+            border-radius: 50%;
             box-shadow: 0 1px 4px rgba(0, 0, 0, 0.07);
-            background: #fff;
         }
 
         .expansion-name {
@@ -202,7 +202,6 @@
             max-width: 90px;
             text-align: center;
             font-size: 0.97em;
-            background: #fff;
             border-radius: 5px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
             padding: 2px 8px;
@@ -238,7 +237,7 @@
 
                         return `
                     <a href="${pack.guideES}" class="expansion-link">
-                        <div class="expansion-icon">
+                        <div class="expansion-icon" style="background:${pack.iconBg || '#fff'}">
                             <img src="${pack.icon}" alt="${pack.name}" title="${pack.name}" />
                             <span class="expansion-name">${pack.name}</span>
                         </div>
